# reel-slicer

./: .gitignore  main.py  pyproject.toml  settings.py  test_yolo.py
src/: settings.py
src/logger/: __init__.py  setup.py
src/segmentation/: analyzer.py  prompts.py
src/transcription/: __init__.py  device_utils.py  short_transcriber.py  transcriber.py
src/video_processing/: __init__.py  cutter.py  gif_overlay.py  reframe.py
tests/: test_device_detection.py  test_transcriber_logging.py
